
allprojects {

    apply plugin: 'java'
    apply plugin: 'eclipse'

    eclipse {
        classpath {
            downloadJavadoc = true
            downloadSources = true
        }
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_20
    targetCompatibility = JavaVersion.VERSION_20
}

ext {
    mockitoVersion = '5.2.0'
    junitVersion = '5.9.3'
    logbackVersion = '1.4.5'
    guavaVersion = '31.1-jre'
    apacheCommonsLangVersion = '3.12.0'
    apacheCommonsTextVersion = '1.10.0'
    apacheCommonsMathVersion = '3.6.1'
}

subprojects {

    repositories {
        mavenCentral()
    }

    dependencies {
        implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.7'
        implementation group: 'ch.qos.logback', name: 'logback-classic', version: logbackVersion
        implementation group: 'ch.qos.logback', name: 'logback-core', version: logbackVersion
        implementation group: 'org.apache.commons', name:'commons-rng-core', version: '1.5'
        implementation group: 'org.apache.commons', name:'commons-rng-simple', version: '1.5'

        testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: junitVersion
        testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: junitVersion
        testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.15.0'
        testImplementation group: 'nl.jqno.equalsverifier', name: 'equalsverifier', version: '3.10'
        testImplementation group: 'org.mockito', name: 'mockito-core', version: mockitoVersion
        testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: mockitoVersion
        testImplementation group: 'org.mockito', name: 'mockito-inline', version: mockitoVersion
    }

    test {
        useJUnitPlatform()
    }

    tasks.withType(JavaCompile) {
        options.compilerArgs += '--enable-preview'
    }

    tasks.withType(JavaExec) {
        jvmArgs += "--enable-preview"
    }

    tasks.withType(Test) {
        jvmArgs += "--enable-preview"
    }
}

// task for gradle wrapper upgrade: change gradleVersion here, then run "./gradlew wrapper"
tasks.named('wrapper') {
   gradleVersion = '8.2'
   distributionType = Wrapper.DistributionType.ALL
}
